--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Facebook/Twitter Sharing -->
     <meta property="og:title" content="Arnold Tonderai Marunda - Workflow Automation Expert" />
     <meta property="og:image" content="https://avatars.githubusercontent.com/u/18683650?v=4" />
-    <meta property="og:description" content="Always creative THINKING different! - I build IoT prototypes using open-source components and everyday tools. I merge the digital and physical to deliver solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. Whether you're a customer looking for hassle-free, efficient solutions or an investor searching for innovation with robust market potential, these IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability." />
+    <meta property="og:description" content="Always creative THINKING different! - I build IoT prototypes using open-source components & everyday tools. I merge the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability." />
       <!-- Twitter Sharing  -->
     <meta name="twitter:card" content="summary"/>
     <!-- Pinterest Sharing  -->
@@ -53,7 +53,7 @@
     <section class="about">
       <hr class="about__hr">
       <p class="about__tagline">Always creative THINKING different!</p>
-      <p class="about__text">I build IoT prototypes using open-source components and everyday tools. I merge the digital and physical to deliver solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. Whether you're a customer looking for hassle-free, efficient solutions or an investor searching for innovation with robust market potential, these IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.</p>
+      <p class="about__text">I build IoT prototypes using open-source components & everyday tools. I merge the digital & physical - delivering solutions that offer intuitive control, seamless monitoring, and real-time insights of both worlds. These IoT projects deliver on real-world performance while championing simplicity, scalability, and sustainability.</p>
     
       <div >
       <ul class="social-share-btns">
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Smart<br>Grid</span>
                 </span>
               </h3>
-              <p class="service__description">Building Energy Management System transforming how buildings manage electricity. Designed for homes, offices, studios, and workshops, it provides on-demand control panels and real-time consumption metrics. This intuitive system empowers users to monitor and optimise energy usage effortlessly, reducing costs and boosting operational efficiency. Its user-centric approach ensures that everyday energy management becomes seamless—an attractive proposition for both end-users and investors looking for smart, scalable solutions.</p>
+              <p class="service__description">Building Energy Management System prototype, transforming how buildings manage electricity. Designed for homes, offices, studios, and workshops, it provides on-demand control panels and real-time consumption metrics. This intuitive system empowers users to monitor and optimise energy usage effortlessly, reducing costs and boosting operational efficiency. Its user-centric approach ensures that everyday energy management becomes seamless—an attractive proposition for both end-users and investors looking for smart, scalable solutions.</p>
               <!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
@@ -131,7 +131,7 @@
                   <span class="service__heading__content__text">Smart<br>Space</span>
                 </span>
               </h3>
-              <p class="service__description">Sustainable Modular Habitat. Reimagining sustainable living. Crafted for safari lodges, eco-cabins, and garden rooms, this 100% solar-powered habitat operates on a 12VDC ecosystem that integrates intelligent, low-voltage lighting control with presence-based automation. The design is inherently modular—scaling from a compact single-room unit to a versatile two-room setup—with an optional sanitary extension that features a waterless toilet, contactless hand-washing tap, and rainwater harvesting kit. This combination of efficiency, eco-friendliness, and flexible design appeals to people pursuing sustainable off-grid living. This combination of efficiency, eco-friendliness, and flexible design appeals to customers pursuing sustainable off-grid living while offering investors a unique entry into a growing market of green, modular solutions.</p>
+              <p class="service__description">Sustainable Modular Habitat proptotype, re-imagining sustainable living. Crafted for safari lodges, eco-cabins, and garden rooms, this 100% solar-powered habitat operates on a 12VDC ecosystem that integrates intelligent, low-voltage lighting control with presence-based automation. The design is inherently modular—scaling from a compact single-room unit to a versatile two-room setup—with an optional sanitary extension that features a waterless toilet, contactless hand-washing tap, and rainwater harvesting kit. This combination of efficiency, eco-friendliness, and flexible design appeals to people pursuing sustainable off-grid living. This combination of efficiency, eco-friendliness, and flexible design appeals to customers pursuing sustainable off-grid living while offering investors a unique entry into a growing market of green, modular solutions.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
@@ -147,7 +147,7 @@
                   <span class="service__heading__content__text">Smart<br>Tank</span>
                 </span>
               </h3>
-              <p class="service__description">Intermediate Bulk Container Liquid Storage catering to the critical needs of beverage and chemical processors. This hybrid solar-powered system operates on a 5VDC ecosystem, incorporating a precision level gauge and real-time flow sensor to streamline liquid resource management. By ensuring accurate monitoring and reducing waste, it offers a reliable solution for efficient liquid handling—especially in remote operations. The prototype not only addresses practical processing challenges but also represents a forward-thinking investment in sustainable, sensor-driven resource management.</p>
+              <p class="service__description">Intermediate Bulk Container Liquid Storage prototype, catering to the critical needs of beverage and chemical processors. This hybrid solar-powered system operates on a 5VDC ecosystem, incorporating a precision level gauge and real-time flow sensor to streamline liquid resource management. By ensuring accurate monitoring and reducing waste, it offers a reliable solution for efficient liquid handling—especially in remote operations. The prototype not only addresses practical processing challenges but also represents a forward-thinking investment in sustainable, sensor-driven resource management.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
