--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Smart<br>Grid</span>
                 </span>
               </h3>
-              <p class="service__description">⚡ Building Energy Management System transforming how buildings manage electricity. Designed for homes, offices, studios, and workshops, it provides on-demand control panels and real-time consumption metrics. This intuitive system empowers users to monitor and optimise energy usage effortlessly, reducing costs and boosting operational efficiency. Its user-centric approach ensures that everyday energy management becomes seamless—an attractive proposition for both end-users and investors looking for smart, scalable solutions.</p>
+              <p class="service__description">⚡ Building Energy Management System transforming how buildings manage electricity. Designed for homes, offices, studios, and workshops, it provides on-demand control panels and real-time consumption metrics. This intuitive system empowers users to monitor and optimise energy usage effortlessly, reducing costs and boosting operational efficiency. </p>
               <!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
@@ -147,7 +147,7 @@
                   <span class="service__heading__content__text">Smart<br>Tank</span>
                 </span>
               </h3>
-              <p class="service__description">🛢️ Bulk Container Liquid Storage catering to the needs of beverage and chemical processors. This hybrid solar-powered system operates on a 5VDC ecosystem, incorporating a precision level gauge and real-time flow sensor to streamline liquid resource management. By ensuring accurate monitoring and reducing waste, it offers a reliable solution for efficient liquid handling—especially in remote operations. The prototype not only addresses practical processing challenges but also represents a forward-thinking investment in sustainable, sensor-driven resource management.</p>
+              <p class="service__description">🛢️ Bulk Container Liquid Storage catering to the needs of beverage and chemical processors. This hybrid solar-powered system operates on a 5VDC ecosystem, incorporating a precision level gauge and real-time flow sensor to streamline liquid resource management. By ensuring accurate monitoring and reducing waste, it offers a reliable solution for efficient liquid handling—especially in remote operations. </p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
