--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   <span class="service__heading__content__text">Hydro:metrica</span>
                 </span>
               </h3>
-              <p class="service__description">💧A smart water telemetry system designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The platform integrates a flow meter sensor, resistive level gauge sensor, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimizing waste and improving overall system efficiency.</p>
+              <p class="service__description">💧A smart water telemetry project designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The platform integrates a flow meter sensor, resistive level gauge sensor, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimizing waste and improving overall system efficiency.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
@@ -147,7 +147,7 @@
                   <span class="service__heading__content__text">Smart:space</span>
                 </span>
               </h3>
-              <p class="service__description">🛖 Sustainable modular habitat re-imagining sustainable living. Crafted for safari lodges, eco-cabins, and garden rooms, this 100% solar-powered habitat operates on a 12VDC ecosystem that integrates intelligent, low-voltage lighting control with presence-based automation. The design includes a compact single-room unit, and an optional sanitary extension that features a waterless toilet, contactless hand-washing tap, and rainwater harvesting kit. This combination of efficiency, eco-friendliness, and innovative design appeals to people pursuing sustainable off-grid living - while offering investors a unique entry into a growing market of green, modular habitats.</p>
+              <p class="service__description">🛖 Sustainable modular habitat project re-imagining sustainable living. Crafted for safari lodges, eco-cabins, and garden rooms, this 100% solar-powered habitat operates on a 12VDC ecosystem that integrates intelligent, low-voltage lighting control with presence-based automation. The design includes a compact single-room unit, and an optional sanitary extension that features a waterless toilet, contactless hand-washing tap, and rainwater harvesting kit. This combination of efficiency, eco-friendliness, and innovative design appeals to people pursuing sustainable off-grid living - while offering investors a unique entry into a growing market of green, modular habitats.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
