--- a/index.html
+++ b/index.html
@@ -117,11 +117,65 @@
                 </span>
               </h3>
               <p class="service__description">⚡ A real-time electricity management project designed for residential and commercial applications. It features an integrated telemetry platform that provides live consumption metrics. The on-demand control interfaces allows users to regulate consumption thresholds, and implement automated energy-saving routines.</p>
-              <!--<ul aria-label="Data Automation" class="service__list" role="list">
+		<!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
               </ul>-->
-            </section>
+ <!-- Toggle Button -->
+  <button id="toggleButton">+ View Diagram</button>
+  
+  <!-- Diagram Container -->
+  <div class="diagram-container" id="diagramContainer">
+  <pre class="diagram">
+                   +-------------------------------+                     
+                   |    Cloud / Remote Server      |                     
+                   +-------------------------------+                     
+                                  ↑                                      
+                               [TCP/IP]                                  
+                                  ↓                                      
+                   +-------------------------------+                     
+                   |        SenseCAP M2            |                     
+                   |         (Gateway)             |                     
+                   +-------------------------------+                     
+                                  ↑                                      
+                              [LoRaWAN]                                  
+                                  ↓                                      
+                   +-------------------------------+                     
+                   |       SenseCap D1L            |                     
+                   | (Touch Display/Controller)    |                     
+                   +-------------------------------+                     
+                                  ↑                                      
+                              [Wireless]                                 
+                                  ↓                                      
+                   +-------------------------------+                     
+                   |         reRouter CM4          |                     
+                   |           (IoT Hub)           |                     
+                   +--------------+----------------+                     
+                                  |                                      
+           +----------------------+-------------------------+            
+           |                      |                         |            
+       [Wireless]             [Wireless]                [Wireless]       
+           |                      |                         |            
++----------+--------+   +---------+---------+     +---------+---------+  
+| Xiao e-Paper Panel|   |   Xiao AC Relay   |     |    Xiao AC Meter  |  
++-------------------+   +---------+---------+     +---------+---------+  
+                                  |                         |            
+                               [Wired]                   [Wired]         
+                                  |                         |            
+                      +-----------+-----------+             |            
+                      |                       |             |            
+              +-------+-------+       +-------+-------+     |            
+              |  Light Switch |       |  Wall Socket  |     |            
+              +---------------+       +---------------+     |            
+                                                            |            
+                                                     +------+-----+      
+                                                     |            |      
+                                                +--- +-----+ +--- +-----+
+                                                |   Grid   | |  Solar   |
+                                                +----------+ +----------+
+</pre>
+</div>
+	    </section>
           </div>
 
           
@@ -327,6 +381,7 @@
     <script src="js/form.js"></script>
     <script src="js/status.js"></script>
     <script src="js/share.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/adblocker.js"></script> 
    
   </body>
