--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </section>
 
     <section aria-labelledby="what-we-do__heading" id="what-we-do">
-      <h2 class="what-we-do__heading" id="what-we-do__heading">Prototypes</h2>
+      <h2 class="what-we-do__heading" id="what-we-do__heading">Projects</h2>
 
       <div class="what-we-do__services-layout">
         <div class="what-we-do__services-layout__row">
@@ -116,7 +116,7 @@
                   <span class="service__heading__content__text">Electro:metrica</span>
                 </span>
               </h3>
-              <p class="service__description">⚡ A real-time electricity management project designed for residential and commercial applications. It features an integrated telemetry platform that provides live/historical consumption metrics. The on-demand control interfaces allows users to regulate consumption thresholds, and implement automated energy-saving routines.</p>
+              <p class="service__description">⚡ A real-time electricity management prototype, designed for residential and commercial applications. It features an integrated telemetry platform that provides live/historical consumption metrics. The on-demand control interfaces allows users to regulate consumption thresholds, and implement automated energy-saving routines.</p>
 		<!--<ul aria-label="Data Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://airbyte.com" target="_blank" rel="nofollow"><img style="padding-top: 0px; padding-bottom: 0px" src="img/Airbyte_logo.svg" width="30%"/></a></li>
                 <li class="service__list__item">Building reliable data pipelines</li>
@@ -186,7 +186,7 @@
                   <span class="service__heading__content__text">Hydro:metrica</span>
                 </span>
               </h3>
-              <p class="service__description">💧 A smart water telemetry project designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The platform integrates a flow meter sensor, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimising waste and improving overall system efficiency.</p>
+              <p class="service__description">💧 A smart water telemetry prototype, designed for resource management in greenhouses, homes, offices, and workshops, providing real-time monitoring and automated distribution control. The platform integrates a flow meter sensor, and relay-actuated valve to enable precise regulation of water usage based on demand patterns, minimising waste and improving overall system efficiency.</p>
               <!--<ul aria-label="e-Commerce Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://www.raspberrypi.com" target="_blank" rel="nofollow"><img src="img/raspberrypi_logo.svg" style="padding-top: 25px; padding-bottom: 24px" width="15%"/></br></a></li>
                 <li class="service__list__item">Building Internet of Things</li>
@@ -252,7 +252,7 @@
                   <span class="service__heading__content__text">Smart:space</span>
                 </span>
               </h3>
-              <p class="service__description">🛖 Sustainable modular habitat project re-imagining sustainable living. Crafted for safari lodges, eco-cabins, and garden rooms, this 100% solar-powered habitat operates on a 12VDC ecosystem that integrates intelligent, low-voltage lighting control with presence-based automation. The design includes a compact single-room unit, and an optional sanitary extension that features a waterless toilet, contactless hand-washing tap, and rainwater harvesting kit. This combination of efficiency, eco-friendliness, and innovative design appeals to people pursuing sustainable off-grid living - while offering investors a unique entry into a growing market of green, modular habitats.</p>
+              <p class="service__description">🛖 Sustainable modular habitat prototype, re-imagining sustainable living. Crafted for safari lodges, eco-cabins, and garden rooms, this 100% solar-powered habitat operates on a 12VDC ecosystem that integrates intelligent, low-voltage lighting control with presence-based automation. The design includes a compact single-room unit, and an optional sanitary extension that features a waterless toilet, contactless hand-washing tap, and rainwater harvesting kit. This combination of efficiency, eco-friendliness, and innovative design appeals to people pursuing sustainable off-grid living - while offering investors a unique entry into a growing market of green, modular habitats.</p>
               <!--<ul aria-label="Process Automation" class="service__list" role="list">
                 <li class="service__list__item"><a href="https://anvil.works" target="_blank" rel="nofollow"><img style="padding-top: 20px; padding-bottom: 21px" src="img/anvil_logo.svg" width="20%"/></a></li>
                 <li class="service__list__item">Building integrated web apps</li>
